--- a/assets/styles/form/form.css
+++ b/assets/styles/form/form.css
@@ -22,6 +22,7 @@
 @media (max-width: 1200px) {
   .wrapper .innerWrapper.form .leftPart {
     align-items: center;
+    width: 100%;
   }
 }
 .wrapper .innerWrapper.form .leftPart .topBelt {
@@ -144,6 +145,7 @@
     display: flex;
     padding: 50px 0;
     justify-content: center;
+    width: 100%;
   }
 }
 .wrapper .innerWrapper.form .rightPart .formBlock {
@@ -184,7 +186,7 @@
   .wrapper .innerWrapper.form .rightPart .formBlock .discount {
     width: 130px;
     top: -30px;
-    right: -20px;
+    right: 20px;
   }
 }
 .wrapper .innerWrapper.form .rightPart .formBlock .discountText {
@@ -195,8 +197,8 @@
 @media (max-width: 700px) {
   .wrapper .innerWrapper.form .rightPart .formBlock .discountText {
     width: 60px;
-    right: 10px;
-    top: -2px;
+    right: 20px;
+    top: 0px;
   }
 }
 .wrapper .innerWrapper.form .rightPart h4 {
